devops/sonar/sonar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-qube
  namespace: sonar
  labels:
    app: sonar-qube
spec:
  selector:
    matchLabels:
      app: sonar-qube
  template:
    metadata:
      labels:
        app: sonar-qube
    spec:
      containers:
      - image: sonarqube:lts-community
        name: sonar
        ports:
        - containerPort: 9000 
          name: http
        volumeMounts:
        - name: sonar-storage
          subPath: conf
          mountPath: /opt/sonarqube/conf
        - name: sonar-storage
          subPath: data
          mountPath: /opt/sonarqube/data
        - name: sonar-storage
          subPath: extensions
          mountPath: /opt/sonarqube/data
        # - name: sonar-config
        #   mountPath: /opt/sonarqube/config
      volumes:
      - name: sonar-storage
        persistentVolumeClaim:
          claimName: sonar-pvc
      # - name: sonar-config
      #   configMap:
      #     name: mysql-config
