devops/sonar/sonar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonar-qube
  namespace: sonar
  labels:
    app: sonar-qube
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: sonar-qube
  type: ClusterIP
