devops/sonar/sonar-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonar-ingress
  namespace: sonar
  annotations:
    traefik.ingress.kubernetes.io/service.stick.cookie: "true"
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sonar.example.io`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: sonar-http
      passHostHeader: true
      port: 9000
  tls:
    secretName: sonar-secret
